syntax = "proto3";

option csharp_namespace = "CompanyService.Protos";

package company;

service Company {
  rpc AddCompany(AddCompanyRequest ) returns (AddCompanyReply);
  rpc GetCompanies(GetCompaniesRequest ) returns (GetCompaniesReply);
  rpc GetCompany (GetCompanyRequest) returns (GetCompanyReply);
  rpc UpdateCompany(UpdateCompanyRequest ) returns (UpdateCompanyReply);
  rpc RemoveCompany(RemoveCompanyRequest ) returns (RemoveCompanyReply);
}

message GetCompanyRequest {
  string guid = 1;
}
message GetCompanyReply {
  string name = 1;
  string guid = 2;
}

message GetCompaniesRequest {
  string restriction = 1;
}
message GetCompaniesReply {
  repeated string names = 1;
}

message AddCompanyRequest {
  string guid = 1;
  string name = 2;
  string token = 3;
}
message AddCompanyReply {
  bool result  = 1;
}

message UpdateCompanyRequest {
  string guid = 1;
  string name = 2;
  string token = 3;
}
message UpdateCompanyReply {
  bool result = 1;
}

message RemoveCompanyRequest {
  string guid = 1;
}
message RemoveCompanyReply {
  bool result = 1;
}
